Address PR review: cache lookup, drop unused API, test null input
- Cache findCJKCapableFamily() result in an AtomicReference with a
  NONE_FOUND sentinel so repeated EditorColorsScheme change events do
  not re-scan the installed font list.
- Remove unused public cjkCapableFont(int, float) method to keep the
  public API surface minimal.
- Replace Arrays.asList with List.of for the candidate list.
- Add withCJKFallback_handlesNullInput test documenting the null
  contract, and findCJKCapableFamily_isCached test verifying the cache.